chore : 기기 변경 위한 커밋

--- a/StoryBoarding.html
+++ b/StoryBoarding.html
@@ -15,18 +15,23 @@
       </div>
 
       <section class="fancy">
-        <h1 class="fancy-title">그 시절 멋쟁이들은 이대 앞으로 모였다</h1>
+        <h1 class="fancy-title">그 시절 멋쟁이들은 <br />이대 앞으로 모였다</h1>
         <div class="fancy-shoe">
           <div class="fancy-shoe-imgWrap">
-            <img class="fancyShoe1" src="IMG/photo/fancyShoe1.svg">
-            <img class="fancyShoe2" src="IMG/photo/fancyShoe2.svg">
-            <img class="fancyShoeLabel" src="IMG/label/fancyShoeLabel.svg">
+            <img class="fancyShoe1" src="IMG/photo/fancyShoe1.svg" />
+            <img class="fancyShoe2" src="IMG/photo/fancyShoe2.svg" />
+            <img class="fancyShoeLabel" src="IMG/label/fancyShoeLabel.svg" />
           </div>
           <div class="fancy-shoe-explain">
-          <div class="fancy-shoe-title">양장점과 구두가게</div>
-          <div class="fancy-shoe-desc">정문에서 이대입구역까지 이르는 길은 「몬아미 양장젼」, 「다림 양장젼」 등의 한옥집을 개조한 맞춤복 양장점들이 줄지어 있었고 띄엄띄엄 구둣가게도 있었다.
-            기성복이 흔치 않았던 시절, 직접 원단과 디자인을 선택해 ‘세상에서 하나밖에 없는 내 옷’을 가지려는 당대의 멋쟁이들이 모두 이대 앞 양장점으로 몰렸다.
-            40대 초중반이상 졸업생들에게는 낯익은 상호인 「광생약국」, 「그린하우스」, 「호원당」도 모두 이 때 생긴 것이다.
+            <div class="fancy-shoe-title">양장점과 구두가게</div>
+            <div class="fancy-shoe-desc">
+              정문에서 이대입구역까지 이르는 길은 「몬아미 양장젼」, 「다림
+              양장젼」 등의 한옥집을 개조한 맞춤복 양장점들이 줄지어 있었고
+              띄엄띄엄 구둣가게도 있었다. 기성복이 흔치 않았던 시절, 직접 원단과
+              디자인을 선택해 ‘세상에서 하나밖에 없는 내 옷’을 가지려는 당대의
+              멋쟁이들이 모두 이대 앞 양장점으로 몰렸다. 40대 초중반이상
+              졸업생들에게는 낯익은 상호인 「광생약국」, 「그린하우스」,
+              「호원당」도 모두 이 때 생긴 것이다.
             </div>
           </div>
         </div>
@@ -35,8 +40,10 @@
         <div class="fancy-center"></div>
         <div class="fancy-vanish"></div>
         <div class="fancy-franchise"></div>
-      </div>
-      <div class="street-shop"></div>
+      </section>
+      <section class="cafe">
+        <h1 class="fancy-title">카페를 가는 목적이 <br />변하다</h1>
+      </section>
     </div>
   </body>
 </html>
