ui - 제 1 섹션: 멋쟁이들의 거리 ui 구현 완료

--- a/StoryBoarding.html
+++ b/StoryBoarding.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="StoryBoarding.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>이대 상권의 어제와 오늘</title>
   </head>
   <body>
@@ -15,28 +19,133 @@
       </div>
 
       <section class="fancy">
-        <h1 class="fancy-title">그 시절 멋쟁이들은 이대 앞으로 모였다</h1>
-        <div class="fancy-shoe">
-          <div class="fancy-shoe-imgWrap">
-            <img class="fancyShoe1" src="IMG/photo/fancyShoe1.svg">
-            <img class="fancyShoe2" src="IMG/photo/fancyShoe2.svg">
-            <img class="fancyShoeLabel" src="IMG/label/fancyShoeLabel.svg">
+        <h1 class="fancy-title">그 시절 멋쟁이들은 <br />이대 앞으로 모였다</h1>
+        <div class="shoe">
+          <div class="shoe-imgWrap">
+            <img class="shoe1" src="IMG/photo/fancy1.svg" />
+            <img class="shoe2" src="IMG/photo/fancy2.svg" />
+            <img class="shoe3" src="IMG/photo/fancy3.svg" />
+            <img class="shoeLabel" src="IMG/label/fancyLabel.svg" />
+            <div class="shoe-source">
+              1. 1960년 이화양장 (출저 : 서울역사박물관) <br />
+              2. 1970년 이대 앞 골목 (출저 : 이화역사관) <br />
+              3. 1966년 학생들의 모습 (출저 : 이대학보)
+            </div>
           </div>
-          <div class="fancy-shoe-explain">
-          <div class="fancy-shoe-title">양장점과 구두가게</div>
-          <div class="fancy-shoe-desc">정문에서 이대입구역까지 이르는 길은 「몬아미 양장젼」, 「다림 양장젼」 등의 한옥집을 개조한 맞춤복 양장점들이 줄지어 있었고 띄엄띄엄 구둣가게도 있었다.
-            기성복이 흔치 않았던 시절, 직접 원단과 디자인을 선택해 ‘세상에서 하나밖에 없는 내 옷’을 가지려는 당대의 멋쟁이들이 모두 이대 앞 양장점으로 몰렸다.
-            40대 초중반이상 졸업생들에게는 낯익은 상호인 「광생약국」, 「그린하우스」, 「호원당」도 모두 이 때 생긴 것이다.
+
+          <div class="explain">
+            <div class="title">세상에 하나뿐인 옷</div>
+            <div class="desc">
+              <div class="shoe-first">
+                기성복이 흔치 않았던 시절, 직접 원단과 디자인을 선택해<br />
+                ‘세상에서 하나밖에 없는 내 옷’을 가지려는 당대의 멋쟁이들이
+                <br />모두 이대 앞 양장점으로 몰렸다.
+              </div>
+              <div class="shoe-second">
+                “그때 멋쟁이들은 이대 앞에 와서<br />
+                양장점 같은 곳에서 옷을 맞췄어요.” (이윤희 교수)
+              </div>
             </div>
           </div>
         </div>
-        <div class="fancy-cheapClothes"></div>
-        <div class="fancy-hair"></div>
-        <div class="fancy-center"></div>
-        <div class="fancy-vanish"></div>
-        <div class="fancy-franchise"></div>
-      </div>
-      <div class="street-shop"></div>
+
+        <div class="hair">
+          <div class="explain">
+            <div class="title">미용실 BOOM!</div>
+            <div class="desc">
+              <div class="hair-first">
+                세상의 가장 예쁜 것들은 다 이대 앞에 있었다.<br />
+                잡지사나 방송국에서도 멋쟁이들의 사진을 찍거나<br />
+                길거리 캐스팅을 위해 몰려들었다. <br />
+                멋쟁이들은 모두 이대 앞으로 온다는 인식 때문에 <br />
+                많은 미용실이 생겼다.
+              </div>
+              <div class="hair-second">
+                “옛날에는 외부 사람들도 시간을 내서 이대까지 와서 <br />
+                「은하 미용실」처럼 유명한 미용실에 많이 갔어요. <br />
+                요즘에는 유명한 미용실들이 강남으로 많이 넘어가서<br />
+                많이 없어졌어요.” (이윤희 교수)
+              </div>
+            </div>
+          </div>
+
+          <div class="hair-imgWrap">
+            <img class="hair1" src="IMG/photo/hair1.svg" />
+            <img class="hair2" src="IMG/photo/hair2.svg" />
+            <img class="hairLabel" src="IMG/label/hairLabel.svg" />
+            <div class="hair-source">
+              1. 1983년 은하 미용실 앞 <br />
+              2, 3. 1983년 김연우 미용실 앞
+            </div>
+          </div>
+        </div>
+
+        <div class="center">
+          <div class="center-imgWrap">
+            <img class="center1" src="IMG/photo/center1.svg" />
+            <img class="center2" src="IMG/photo/center2.svg" />
+            <img class="center3" src="IMG/photo/center3.svg" />
+            <img class="centerLabel" src="IMG/label/CenterLabel.svg" />
+            <div class="center-source">
+              1. 2000년대 보세의류거리 (출저 : TN 뉴스) <br />
+              2. 2000년대 중남미옷을 파는 가게 (출저 : TN 뉴스) <br />
+              3. 2000년대 교복을 입고 쇼핑하는 학생들 (출저 : TN 뉴스)
+            </div>
+          </div>
+          <div class="explain">
+            <div class="title">중심이 되다</div>
+            <div class="desc">
+              <div class="center-first">
+                지하철 2호선 이대역이 개통되고 여대생 뿐만 아니라<br />
+                직장인과 중고등학생도 이대 상권으로 모였다. <br />
+                저가부터 고가까지 선택의 폭이 다양했고, <br />
+                옷가게 뿐만 아니라 가죽공방, 악세사리 등<br />
+                재미있는 가게가 많았다. <br />
+                그 당시 이대는 젊은 여성들의 패션의 중심지였다.<br />
+              </div>
+              <div class="center-second">
+                “90년대까지 패션의 첨단이었던 곳이라서 <br />
+                인디 디자이너들의 옷을 구매하는 것이 매력있었어요. <br />
+                2000년대 초까지 미국에서 들어왔을 때 <br />
+                이대 상권에서 옷을 구매했어요.” (손아정 교수)
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="getDark">
+          <div class="explain">
+            <div class="title">저무는 상권</div>
+            <div class="desc">
+              <div class="getDark-first">
+                외국인 관광객을 타겟으로 화장품 가게가 증가하는 등 <br />
+                상업화가 가속화됐다. 특색이 없어지자 상권이 무너지고 <br />
+                멋쟁이들은 이대를 찾지 않게 되었다.
+              </div>
+              <div class="getDark-second">
+                “중국 관광객들에게 타겟을 맞추어 변해버린 느낌이에요. <br />
+                상업화되어 저렴하게 느껴지는 공간이 많아 <br />
+                사람들이 찾지 않게 되자 상권이 무너지는 결과를 낳은 것 같아요.”
+                <br />(차지은 교수)
+              </div>
+            </div>
+          </div>
+          <div class="getDark-imgWrap">
+            <img class="getDark1" src="IMG/photo/getDark1.svg" />
+            <img class="getDark2" src="IMG/photo/getDark2.svg" />
+            <img class="getDarkLabel" src="IMG/label/getDarkLabel.svg" />
+          </div>
+        </div>
+
+        <div class="fancy-conclusion"></div>
+      </section>
+
+      <section class="streetShop">
+        <h1 class="streetShop-title">
+          포장마차들은 다 <br />
+          어디로 갔을까
+        </h1>
+      </section>
     </div>
   </body>
 </html>
