chore : 기기 변경 위한 커밋 2

--- a/EwhaHistory.html
+++ b/EwhaHistory.html
@@ -147,28 +147,116 @@
         </h1>
         <div class="appear">
           <div class="appear-imgWrap">
-            <img class="appear1" src="IMG/photo/fancy1.svg" />
-            <img class="appear2" src="IMG/photo/fancy2.svg" />
-            <img class="appearLabel" src="IMG/label/fancyLabel.svg" />
+            <img class="appear1" src="IMG/photo/appear2.svg" />
+            <img class="appear2" src="IMG/photo/appear2.svg" />
+            <img class="appearLabel" src="IMG/label/appearLabel.svg" />
             <div class="appear-source">
-              1. 1960년 이화양장 (출저 : 서울역사박물관) <br />
-              2. 1970년 이대 앞 골목 (출저 : 이화역사관) <br />
-              3. 1966년 학생들의 모습 (출저 : 이대학보)
+              1.<br />
+              2. 2015년 이화여대길 노점 <br />(중앙일보)
             </div>
           </div>
 
           <div class="explain">
-            <div class="title">세상에 하나뿐인 옷</div>
+            <div class="title">포장마차 등장</div>
             <div class="desc">
               <div class="shoe-first">
-                기성복이 흔치 않았던 시절, 직접 원단과 디자인을 선택해<br />
-                ‘세상에서 하나밖에 없는 내 옷’을 가지려는 당대의 멋쟁이들이
-                <br />모두 이대 앞 양장점으로 몰렸다.
+                1980년대부터 이대 정문에 포장마차들이 생겼다.<br />
+                포장마차는 서서 먹어야 하는 불편함도 있었지만 <br />
+                먹는 시간을 절약할 수 있고 가격이 저렴하며 <br />
+                기호에 따라 골라먹을 수 있어서 인기만점이었다.<br />
               </div>
               <div class="shoe-second">
-                “그때 멋쟁이들은 이대 앞에 와서<br />
-                양장점 같은 곳에서 옷을 맞췄어요.” (이윤희 교수)
+                “학력고사 예비소집일에 전주에서 이대를 처음 왔는데
+                <br />지하철역에서 내리자마자 포장마차가 많아서 놀랐어요.<br />
+                먹거리보다는 악세사리류가 많았어요.”(이윤희 교수)
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="popular">
+          <div class="popular-imgWrap">
+            <img class="popular1" src="IMG/photo/popular1.svg" />
+            <img class="popular2" src="IMG/photo/popular2.svg" />
+            <img class="popular3" src="IMG/photo/popular3.svg" />
+            <img class="popular4" src="IMG/photo/popular4.svg" />
+            <div class="popular-source">
+              1. 2010년대 닭꼬치 포장마차 (출저 : 현대) <br />
+              2. 2010년대 닭꼬치 포장마차의 닭꼬치 (출저 : 현대) <br />
+              3. 2010년대 깻잎 떡볶이 포장마차 (출저 : 현대) <br />
+              4. 2010년대 깻잎 떡볶이 포장마차의 떡볶이 (출저 : 현대)<br />
+            </div>
+          </div>
+
+          <div class="explain">
+            <div class="title">인기 메뉴</div>
+            <div class="desc">
+              <div class="popular-first">
+                “오전에는 토스트 집, 오후에는 계란빵, <br />
+                밤에는 떡볶이가 학생들에게 가장 인기있었어요. <br />
+                그리고 칵테일을 파는 포장마차도 잠깐 있었어요.” <br />
+                (박지현 교수)
+              </div>
+              <div class="popular-second">
+                “깻잎떡볶이를 사서 야근할 때 많이 먹었어요.”<br />
+                (이윤희 교수)
+              </div>
+              <div class="popular-third">
+                “학생들에게 가장 인기가 좋았던 곳은 닭꼬치였고 <br />
+                저도 가장 자주 이용했어요.” (차지은 교수)
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="problem">
+          <div class="problem-imgWrap">
+            <img class="problem1" src="IMG/photo/problem1.svg" />
+            <img class="problem2" src="IMG/photo/problem2.svg" />
+            <img class="problem3" src="IMG/photo/problem3.svg" />
+            <img class="problemLabel" src="IMG/photo/problemLabel.svg" />
+            <div class="problem-source">
+              1. 2014년 이화여대길 쓰레기 (1) (출저 : 이대학보) <br />
+              2. LPG 가스통 (출저 : 박스퀘어 홈페이지) <br />
+              3. 2014년 이화여대길 쓰레기 (2) (출저 : 이대학보) <br />
+            </div>
+          </div>
+
+          <div class="explain">
+            <div class="title">문제점 대두</div>
+            <div class="desc">
+              <div class="problem-first">
+                학교는 통학로 확보, 주민들은 도심 정비를 이유로<br />
+                끊임없이 민원을 제기했다. 문제는 그 뿐만이 아니었다.<br />
+                음식 조리에 따른 위생을 보장하기 어려주며<br />
+                LPG 가스통은 실로 위험했다. <br />
+                불법 노점상이지만 그렇다고 오랜 역사를 가진 노점상을 쉽게 철거할
+                수는 없었다.<br />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="boxSquare">
+          <div class="explain">
+            <div class="title">박스퀘어 설립</div>
+            <div class="desc">
+              <div class="boxSquare-first">
+                서대문구는 예산을 편성하여 <br />
+                노점상을 위한 공간을 만들기로 했다. <br />
+                신촌 기차역 앞 쉼터였던 공간을 <br />
+                노점상들이 영업할 수 있는 공간으로 만들고 <br />
+                모두 입점할 수 있도록 돕는 것이다.<br />
+              </div>
+            </div>
+          </div>
+
+          <div class="boxSquare-imgWrap">
+            <img class="boxSquare1" src="IMG/photo/boxSquare1.svg" />
+            <img class="boxSquare2" src="IMG/photo/boxSquare2.svg" />
+            <img class="boxSquare3" src="IMG/photo/boxSquare3.svg" />
+            <img class="boxSquareLabrl" src="IMG/photo/boxSquareLabel.svg" />
+            <div class="boxSquare-source">
+              1. 박스퀘어 공사 중 사진 (출저 : 박스퀘어 홈페이지) <br />
+              2. 박스퀘어 예상도 (출저 : 박스퀘어 홈페이지)<br />
+              3. 박스퀘어 야경 (출저 : 박스퀘어 홈페이지)<br />
             </div>
           </div>
         </div>
