ui - 카페 섹션 ui 구현

--- a/EwhaHistory.html
+++ b/EwhaHistory.html
@@ -174,19 +174,6 @@
           </div>
         </div>
         <div class="popular">
-          <div class="popular-imgWrap">
-            <img class="popular1" src="IMG/photo/popular1.svg" />
-            <img class="popular2" src="IMG/photo/popular2.svg" />
-            <img class="popular3" src="IMG/photo/popular3.svg" />
-            <img class="popular4" src="IMG/photo/popular4.svg" />
-            <div class="popular-source">
-              1. 2010년대 닭꼬치 포장마차 (출저 : 현대) <br />
-              2. 2010년대 닭꼬치 포장마차의 닭꼬치 (출저 : 현대) <br />
-              3. 2010년대 깻잎 떡볶이 포장마차 (출저 : 현대) <br />
-              4. 2010년대 깻잎 떡볶이 포장마차의 떡볶이 (출저 : 현대)<br />
-            </div>
-          </div>
-
           <div class="explain">
             <div class="title">인기 메뉴</div>
             <div class="desc">
@@ -206,17 +193,31 @@
               </div>
             </div>
           </div>
+
+          <div class="popular-imgWrap">
+            <img class="popular1" src="IMG/photo/popular1.svg" />
+            <img class="popular2" src="IMG/photo/popular2.svg" />
+            <img class="popular3" src="IMG/photo/popular3.svg" />
+            <img class="popular4" src="IMG/photo/popular4.svg" />
+            <div class="popular-source">
+              1. 2010년대 닭꼬치 포장마차 (출저 : 현대) <br />
+              2. 2010년대 닭꼬치 포장마차의 닭꼬치 (출저 : 현대) <br />
+              3. 2010년대 깻잎 떡볶이 포장마차 (출저 : 현대) <br />
+              4. 2010년대 깻잎 떡볶이 포장마차의 떡볶이 (출저 : 현대)<br />
+            </div>
+          </div>
         </div>
         <div class="problem">
           <div class="problem-imgWrap">
             <img class="problem1" src="IMG/photo/problem1.svg" />
             <img class="problem2" src="IMG/photo/problem2.svg" />
             <img class="problem3" src="IMG/photo/problem3.svg" />
-            <img class="problemLabel" src="IMG/photo/problemLabel.svg" />
+            <img class="problemLabel" src="IMG/label/problemLabel.svg" />
             <div class="problem-source">
-              1. 2014년 이화여대길 쓰레기 (1) (출저 : 이대학보) <br />
+              1. 2014년 이화여대길 쓰레기 (1) <br />
+              (출저 : 이대학보) <br />
               2. LPG 가스통 (출저 : 박스퀘어 홈페이지) <br />
-              3. 2014년 이화여대길 쓰레기 (2) (출저 : 이대학보) <br />
+              3. 2014년 이화여대길 쓰레기 (2) <br />(출저 : 이대학보) <br />
             </div>
           </div>
 
@@ -228,8 +229,8 @@
                 끊임없이 민원을 제기했다. 문제는 그 뿐만이 아니었다.<br />
                 음식 조리에 따른 위생을 보장하기 어려주며<br />
                 LPG 가스통은 실로 위험했다. <br />
-                불법 노점상이지만 그렇다고 오랜 역사를 가진 노점상을 쉽게 철거할
-                수는 없었다.<br />
+                불법 노점상이지만 그렇다고 오랜 역사를 가진 포장마차를<br />
+                쉽게 철거할 수는 없었다.<br />
               </div>
             </div>
           </div>
@@ -250,13 +251,69 @@
 
           <div class="boxSquare-imgWrap">
             <img class="boxSquare1" src="IMG/photo/boxSquare1.svg" />
-            <img class="boxSquare2" src="IMG/photo/boxSquare2.svg" />
+            <img class="boxSquare2" src="IMG/photo/boxSquare2.png" />
             <img class="boxSquare3" src="IMG/photo/boxSquare3.svg" />
-            <img class="boxSquareLabrl" src="IMG/photo/boxSquareLabel.svg" />
+            <img class="boxSquareLabel" src="IMG/label/boxSquareLabel.svg" />
             <div class="boxSquare-source">
               1. 박스퀘어 공사 중 사진 (출저 : 박스퀘어 홈페이지) <br />
               2. 박스퀘어 예상도 (출저 : 박스퀘어 홈페이지)<br />
               3. 박스퀘어 야경 (출저 : 박스퀘어 홈페이지)<br />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="cafe">
+        <h1 class="cafe-title">
+          카페를 가는 목적이 <br />
+          변하다
+        </h1>
+        <div class="movement">
+          <div class="movement-imgWrap">
+            <img class="movement1" src="IMG/photo/movement1.svg" />
+            <img class="movement2" src="IMG/photo/movement2.svg" />
+            <img class="movementLabel" src="IMG/label/movementLabel.svg" />
+            <div class="movement-source">
+              1. 2000년대 보세의류거리 (출저 : TN 뉴스) <br />
+              2. 2000년대 중남미옷을 파는 가게 (출저 : TN 뉴스) <br />
+              3. 2000년대 교복을 입고 쇼핑하는 학생들 (출저 : TN 뉴스)
+            </div>
+          </div>
+          <div class="explain">
+            <div class="title">학생운동의 근거지</div>
+            <div class="desc">
+              <div class="movement-first">
+                학교 근처 카페는 학생 운동을 주도하던 학생들의 <br />동아리방을
+                대신했다. <br />
+                특히 이대 앞 카페는 이대 학생들이<br />
+                여성운동을 이끌어 나갈 때 토론의 장이 됐다.<br />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="board">
+          <div class="explain">
+            <div class="title">게시판</div>
+            <div class="desc">
+              <div class="board-first">
+                1980년대까지는 삐삐가 대중화되기 전이었다. <br />
+                연락 수단이 귀했던 때 학교 근처 명소는 게시판 역할을 했다.
+                <br />
+                요즘으로 치면 SNS의 아날로그 버전인 셈이다.
+              </div>
+              <div class="board-second">
+                “그때는 카페라는 개념이 없었어요. <br />
+                삐삐가 나오기 전 「그린하우스」 옆에 메모판이 있었는데,<br />
+                타 대학 친구들이 오면 내가 어디에 있다는 걸<br />
+                그 메모판에 적어놨었어요.”(이윤희 교수)<br />
+              </div>
+            </div>
+          </div>
+          <div class="board-imgWrap">
+            <img class="board1" src="IMG/photo/board1.svg" />
+            <img class="boardLabel" src="IMG/label/boardLabel.svg" />
+            <div class="board-source">
+              1971년 그린하우스 앞 (출저 : 디지털 도서관 ‘셀수스’)
             </div>
           </div>
         </div>
