ui - 마지막 섹션 틀 잡기

--- a/EwhaHistory.html
+++ b/EwhaHistory.html
@@ -14,8 +14,11 @@
   <body>
     <div class="main-wrapper">
       <div class="title-section">
-        <h1>이대 상권의 어제와 오늘</h1>
-        <p>1980년대부터 현재까지 이대 상권의 변화</p>
+        <div class="mainTitle">
+          <h1>이대 상권의 어제와 오늘</h1>
+          <h2>1980년대부터 현재까지 이대 상권의 변화</h2>
+          <p>By 류성경, 허가솔</p>
+        </div>
       </div>
 
       <section class="fancy">
@@ -314,6 +317,62 @@
             <img class="boardLabel" src="IMG/label/boardLabel.svg" />
             <div class="board-source">
               1971년 그린하우스 앞 (출저 : 디지털 도서관 ‘셀수스’)
+            </div>
+          </div>
+        </div>
+
+        <div class="meeting">
+          <div class="meeting-imgWrap">
+            <img class="meeting1" src="IMG/photo/meeting1.svg" />
+            <img class="meeting2" src="IMG/photo/meeting2.svg" />
+            <img class="meetingLabel" src="IMG/label/meetingLabel.svg" />
+            <div class="meeting-source">
+              1. 2013년 라리 간판 (출저 : 블로그 ‘댄저씨 일상’) <br />
+              2. 2013년 라리 내부 (출저 : 블로그 ‘댄저씨 일상’)
+            </div>
+          </div>
+          <div class="explain">
+            <div class="title">미팅과 소개팅</div>
+            <div class="desc">
+              <div class="meeting-first">
+                오늘날의 미팅은 술집에서 술과 함께하지만<br />
+                그 당시 미팅은 카페에서 커피와 함께였다.
+              </div>
+              <div class="meeting-second">
+                “정문 「벤프(Banff)」, 후문 「라리」의 저녁은 <br />
+                미팅과 소개팅의 장소였어요” (박지현 교수)
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="cafeStudying">
+          <div class="explain">
+            <div class="cafeStudying-imgWrap">
+              <img class="cafeStudying1" src="IMG/photo/cafeStudying1.svg" />
+              <img class="cafeStudying2" src="IMG/photo/cafeStudying2.svg" />
+              <img class="cafeStudying3" src="IMG/photo/cafeStudying3.svg" />
+              <img class="cafeStudying4" src="IMG/photo/cafeStudying4.svg" />
+              <img
+                class="cafeStudyingLabel"
+                src="IMG/label/cafeStudyingLabel.svg"
+              />
+            </div>
+            <div class="explain">
+              <div class="title">'카공'</div>
+              <div class="desc">
+                <div class="cafeStudying-first">
+                  1999년 스타벅스 1호점이 들어서면서 <br />
+                  학생들이 공부를 할 수 있는 환경의 <br />
+                  카페들이 많이 등장했다. <br />
+                  이후 커피전문점에서 책을 읽거나 <br />
+                  세미나를 하는 것이 새로운 문화로 자리 잡았다. <br />
+                </div>
+                <div class="cafeStudying-second">
+                  “캔모어에서 친구들과 대화 또는 같이 과제를 했어요.” <br />
+                  (차지은 교수)
+                </div>
+              </div>
             </div>
           </div>
         </div>
