ui - 겹친 사진 구도 구현 완료

--- a/EwhaHistory.html
+++ b/EwhaHistory.html
@@ -140,7 +140,15 @@
           </div>
         </div>
 
-        <div class="fancy-conclusion"></div>
+        <div class="fancy-conclusion">
+          <img class="title-bubble" src="" />
+          <h1>멋쟁이들을 다시 돌아오게 하기 위해서는?</h1>
+          <div class="opinion1"></div>
+          <div class="opinion2"></div>
+          <div class="opinion3"></div>
+          <div class="opinion4"></div>
+          <div class="opinion5"></div>
+        </div>
       </section>
 
       <section class="streetShop">
@@ -177,7 +185,7 @@
           </div>
         </div>
         <div class="popular">
-          <div class="explain">
+          <div class="popular-explain">
             <div class="title">인기 메뉴</div>
             <div class="desc">
               <div class="popular-first">
@@ -347,32 +355,59 @@
         </div>
 
         <div class="cafeStudying">
-          <div class="explain">
-            <div class="cafeStudying-imgWrap">
-              <img class="cafeStudying1" src="IMG/photo/cafeStudying1.svg" />
-              <img class="cafeStudying2" src="IMG/photo/cafeStudying2.svg" />
-              <img class="cafeStudying3" src="IMG/photo/cafeStudying3.svg" />
-              <img class="cafeStudying4" src="IMG/photo/cafeStudying4.svg" />
-              <img
-                class="cafeStudyingLabel"
-                src="IMG/label/cafeStudyingLabel.svg"
-              />
-            </div>
-            <div class="explain">
-              <div class="title">'카공'</div>
-              <div class="desc">
-                <div class="cafeStudying-first">
-                  1999년 스타벅스 1호점이 들어서면서 <br />
-                  학생들이 공부를 할 수 있는 환경의 <br />
-                  카페들이 많이 등장했다. <br />
-                  이후 커피전문점에서 책을 읽거나 <br />
-                  세미나를 하는 것이 새로운 문화로 자리 잡았다. <br />
-                </div>
-                <div class="cafeStudying-second">
-                  “캔모어에서 친구들과 대화 또는 같이 과제를 했어요.” <br />
-                  (차지은 교수)
-                </div>
+          <div class="cafeStudying-explain">
+            <div class="title">'카공'</div>
+            <div class="desc">
+              <div class="cafeStudying-first">
+                1999년 스타벅스 1호점이 들어서면서 <br />
+                학생들이 공부를 할 수 있는 환경의 <br />
+                카페들이 많이 등장했다. <br />
+                이후 커피전문점에서 책을 읽거나 <br />
+                세미나를 하는 것이 새로운 문화로 자리 잡았다. <br />
               </div>
+              <div class="cafeStudying-second">
+                “캔모어에서 친구들과 대화 또는 같이 과제를 했어요.” <br />
+                (차지은 교수)
+              </div>
+            </div>
+          </div>
+
+          <div class="cafeStudying-imgWrap">
+            <img class="cafeStudying1" src="IMG/photo/cafeStudying1.svg" />
+            <img class="cafeStudying2" src="IMG/photo/cafeStudying2.svg" />
+            <img class="cafeStudying3" src="IMG/photo/cafeStudying3.svg" />
+            <img class="cafeStudying4" src="IMG/photo/cafeStudying4.svg" />
+            <img
+              class="cafeStudyingLabel"
+              src="IMG/label/cafeStudyingLabel.svg"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="conclusion">
+        <div class="conclusion-imgWrap">
+          <div class="first-conclusion">
+            <img src="IMG/photo/bottomImg1.svg" />
+            <div class="first-conclusion-title">
+              양장점이 생기자 멋쟁이들이 모였고, 멋쟁이들이 모이자 미용실이
+              생겼다. <br />
+              이대역이 개통되며 상권이 부흥했지만, 상업화가 가속화되자 상권이
+              무너졌다.
+            </div>
+          </div>
+          <div class="second-conclusion">
+            <img src="IMG/photo/bottomImg2.png" />
+            <div class="second-conclusion-title">
+              많은 사랑을 받던 포장마차는 여러 문제점 때문에 박스퀘어로
+              옮겨졌다.<br />
+            </div>
+          </div>
+          <div class="third-conclusion">
+            <img src="IMG/photo/bottomImg3.png" />
+            <div class="third-conclusion-title">
+              학생 운동의 근거지였던 카페는 게시판과 미팅 장소의 역할을 하다
+              현재는 공부 장소가 됐다.<br />
             </div>
           </div>
         </div>
