ui - 최종 출처 파트 구현

--- a/EwhaHistory.html
+++ b/EwhaHistory.html
@@ -162,8 +162,9 @@
             <img class="appear2" src="IMG/photo/appear2.svg" />
             <img class="appearLabel" src="IMG/label/appearLabel.svg" />
             <div class="appear-source">
-              1.<br />
-              2. 2015년 이화여대길 노점 <br />(중앙일보)
+              1. 2009년 이화여대길 (1) <br />(출처 : 두산백과) <br />
+              2. 2009년 이화여대길 (2) <br />
+              (출처 : 두산백과)
             </div>
           </div>
 
@@ -409,6 +410,102 @@
               학생 운동의 근거지였던 카페는 게시판과 미팅 장소의 역할을 하다
               현재는 공부 장소가 됐다.<br />
             </div>
+          </div>
+        </div>
+
+        <div class="feeling"></div>
+        <div class="total-source">
+          <div class="interview-source">
+            ※ 인터뷰 <br />
+            박지현 교수님, 손아정 교수님, 이윤희 교수님, 차지은 교수님, 최희정
+            교수님
+          </div>
+          <div class="doc-source">
+            ※ 참고문헌<br />
+            [단행본]<br />
+            김진, 《이대앞 골목산책》, 서대문구, 2018
+          </div>
+          <div class="news-source">
+            [신문기사] <br />
+            <a
+              href="https://inews.ewha.ac.kr/news/articleView.html?idxno=18810"
+            >
+              쓰레기 무단 투기로 몸살 앓는 이화여대길, 《이대학보》, 2014</a
+            >
+
+            <br />
+
+            <a href="https://www.mbn.co.kr/news/society/2969092"
+              >이화여자대학교 학보사에 구애편지 봇물…'그때 그시절!',
+              《MBN뉴스》, 2016</a
+            >
+
+            <br />
+
+            <a href="https://www.metroseoul.co.kr/article/2018082000132"
+              >청년문화史로 재조명한 '신촌'..서울역사博 전시, 《metro》, 2018</a
+            >
+
+            <br />
+
+            <a href="https://inews.ewha.ac.kr/news/articleView.html?idxno=10627"
+              >1960∼80년대, 여성 패션 주름잡은 이화, 《이대학보》, 2005</a
+            >
+
+            <br />
+
+            <a href="https://inews.ewha.ac.kr/news/articleView.html?idxno=15011"
+              >30년 넘게 이대 앞 카페 문화 간직한 ‘시나위’, 《이대학보》,
+              2009</a
+            >
+
+            <br />
+          </div>
+          <div class="dic-source">
+            [사전] <br />
+            <a
+              href="https://www.doopedia.co.kr/photobox/comm/community.do?_method=view&GAL_IDX=101012000742719"
+              >두산, 《두피백과》, 2009</a
+            >
+            <br />
+          </div>
+
+          <div class="internet-source">
+            [인터넷 사이트] <br />
+            <a href="http://www.boxquare.kr/">《박스퀘어》</a>
+            <br />
+
+            <a
+              href="https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=the_ewha&logNo=20133031620"
+              >이대앞 빠리다방·그린하우스를 아시나요?, 《이화여자대학교
+              블로그》, 2011
+            </a>
+            <br />
+
+            <a
+              href="https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=coweb&logNo=220232054673"
+              >이대근처의 시나위 카페에서, 《사진가의 눈》, 2015
+            </a>
+            <br />
+
+            <a
+              href="https://young.hyundai.com/magazine/trend/detail.do?seq=17454"
+              >출출할 땐 이곳으로! 이대 포장마차 거리 추천 음식 리스트,
+              《현대》, 2018
+            </a>
+            <br />
+
+            <a
+              href="https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=uncle_dann&logNo=80201053085"
+              >카페 라리, 《댄저씨의 일상》, 2013
+            </a>
+            <br />
+
+            <a
+              href="http://celsus.org/bbs/board.php?bo_table=still&wr_id=11032&sca=%ED%92%8D%EA%B2%BD&spt=-10804&page=2"
+              >50년 전후 이화여대 정문 앞 거리 풍경, 《CELSUS》, 2022</a
+            >
+            <br />
           </div>
         </div>
       </section>
