ui-첫번째 섹션 결론 구현

--- a/EwhaHistory.html
+++ b/EwhaHistory.html
@@ -141,13 +141,77 @@
         </div>
 
         <div class="fancy-conclusion">
-          <img class="title-bubble" src="" />
-          <h1>멋쟁이들을 다시 돌아오게 하기 위해서는?</h1>
-          <div class="opinion1"></div>
-          <div class="opinion2"></div>
-          <div class="opinion3"></div>
-          <div class="opinion4"></div>
-          <div class="opinion5"></div>
+          <div class="fancy-conclusion-title">
+            <div class="title-bubble">
+              <p>교수님의 입장에서 보는</p>
+            </div>
+            <h1>멋쟁이들을 다시 돌아오게 하기 위해서는?</h1>
+          </div>
+          <div class="opinion-mainWrap">
+            <div class="opinion-wrap">
+              <h2>손아정 교수</h2>
+              <div class="opinion1">
+                <p>
+                  “임대료를 낮춰서 실력 있는 인디 디자이너들이 들어올 수 있도록
+                  해야 할 것 같아요.”
+                </p>
+              </div>
+            </div>
+            <div class="opinion-wrap2">
+              <div class="opinion2">
+                <p>
+                  “예전에는 수제 신발 거리가 있었는데 그런 ‘identity’가
+                  없어졌어요.
+                  <br />
+                  아직도 이대 상권에는 가능성이 있다고 생각해요. <br />
+                  비건, 티(tea), 자연주의적 아이템들을 특성화하면 좋을 것
+                  같아요.
+                  <br />
+                  이런 것들을 특성화하는 것이 대한민국에서는 쉽지 않을 것
+                  같아요.”
+                </p>
+              </div>
+              <h2>이윤희 교수</h2>
+            </div>
+            <div class="opinion-wrap">
+              <h2>
+                건축학과 <br />
+                최희정 교수
+              </h2>
+              <div class="opinion3">
+                <p>
+                  “관광객을 유치하도록 노력해야 해요. <br />그리고 임대료를 낮춰
+                  젊은 창업가들에게 기회를 주면 좋을 것 같아요.”
+                </p>
+              </div>
+            </div>
+            <div class="opinion-wrap2">
+              <div class="opinion4">
+                <p>
+                  “시대가 바뀌어 오프라인 상점은 많이 사라지는 추세라 상권을
+                  살리리는데 어려움이 많을 것 같아요. <br />
+                  문화 공간이 결합된 타입으로 개발되거나 특색있는 제품으로
+                  승부를 봐야 할 것 같아요.<br />
+                  또한 관광객 유치도 적극적으로 해야 할 것 같습니다.”<br />
+                </p>
+              </div>
+              <h2>
+                건축학과 <br />
+                박지현 교수
+              </h2>
+            </div>
+            <div class="opinion-wrap">
+              <h2 class="opinion-cha">차지은 교수</h2>
+              <div class="opinion5">
+                <p>
+                  “중국 관광객들을 대상으로 하는 상권이 생겨난 것이 상권이 죽은
+                  원인 중에 하나라고 생각해요. <br />
+                  학생들이 주로 이용할 수 있는 시설들이 많이 생겨야 할 것
+                  같아요.”
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -386,34 +450,22 @@
         </div>
       </section>
 
-      <section class="conclusion">
-        <div class="conclusion-imgWrap">
-          <div class="first-conclusion">
-            <img src="IMG/photo/bottomImg1.svg" />
-            <div class="first-conclusion-title">
-              양장점이 생기자 멋쟁이들이 모였고, 멋쟁이들이 모이자 미용실이
-              생겼다. <br />
-              이대역이 개통되며 상권이 부흥했지만, 상업화가 가속화되자 상권이
-              무너졌다.
-            </div>
+      <section class="conclusionWrap">
+        <div class="conclusion">
+          <div class="conclusion-imgWrap">
+            <img src="IMG/photo/bottomImg1.svg" class="conclusionImg1" />
+            <img src="IMG/photo/bottomImg2.png" class="conclusionImg2" />
+            <img src="IMG/photo/bottomImg3.png" class="conclusionImg3" />
           </div>
-          <div class="second-conclusion">
-            <img src="IMG/photo/bottomImg2.png" />
-            <div class="second-conclusion-title">
-              많은 사랑을 받던 포장마차는 여러 문제점 때문에 박스퀘어로
-              옮겨졌다.<br />
-            </div>
-          </div>
-          <div class="third-conclusion">
-            <img src="IMG/photo/bottomImg3.png" />
-            <div class="third-conclusion-title">
-              학생 운동의 근거지였던 카페는 게시판과 미팅 장소의 역할을 하다
-              현재는 공부 장소가 됐다.<br />
-            </div>
+          <div class="first-conclusion-title">
+            짧다고도 할 수 있는 60년 동안 이대 앞 상권은 많은 변화가 있었다.
+            <br />
+            우리가 일상적으로 보던 학교 앞 상권은 이러한 변화의 결과였다.<br />
+            이대 상권의 찬란한 과거를 되찾기 위해 우리는 관심을 가지고 기록하고
+            알려야 할 것이다.<br />
           </div>
         </div>
 
-        <div class="feeling"></div>
         <div class="total-source">
           <div class="interview-source">
             ※ 인터뷰 <br />
