fix: 화질 이슈로 사진 교환

--- a/EwhaHistory.html
+++ b/EwhaHistory.html
@@ -46,7 +46,7 @@
               </div>
               <div class="shoe-second">
                 “그때 멋쟁이들은 이대 앞에 와서<br />
-                양장점 같은 곳에서 옷을 맞췄어요.” (이윤희 교수)
+                양장점 같은 곳에서 옷을 맞췄어요.” (건축학과 이윤희 교수)
               </div>
             </div>
           </div>
@@ -78,7 +78,7 @@
             <img class="hairLabel" src="IMG/label/hairLabel.svg" />
             <div class="hair-source">
               1. 1983년 은하 미용실 앞 <br />
-              2, 3. 1983년 김연우 미용실 앞
+              2. 1983년 김연우 미용실 앞
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
                 “90년대까지 패션의 첨단이었던 곳이라서 <br />
                 인디 디자이너들의 옷을 구매하는 것이 매력있었어요. <br />
                 2000년대 초까지 미국에서 들어왔을 때 <br />
-                이대 상권에서 옷을 구매했어요.” (손아정 교수)
+                이대 상권에서 옷을 구매했어요.” (환경공학과 손아정 교수)
               </div>
             </div>
           </div>
@@ -129,7 +129,7 @@
                 “중국 관광객들에게 타겟을 맞추어 변해버린 느낌이에요. <br />
                 상업화되어 저렴하게 느껴지는 공간이 많아 <br />
                 사람들이 찾지 않게 되자 상권이 무너지는 결과를 낳은 것 같아요.”
-                <br />(차지은 교수)
+                <br />(건축학과 차지은 교수)
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
         </h1>
         <div class="appear">
           <div class="appear-imgWrap">
-            <img class="appear1" src="IMG/photo/appear2.svg" />
+            <img class="appear1" src="IMG/photo/appear1.svg" />
             <img class="appear2" src="IMG/photo/appear2.svg" />
             <img class="appearLabel" src="IMG/label/appearLabel.svg" />
             <div class="appear-source">
